--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Shopping List</title>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 <div class="item-form-container">
     <form id="item-form">
         <div>
-            <label for="item">Item</label>
+            <label for="item-name">Item</label>
             <input type="text" id="item-name">
         </div>
         <div>
-            <label for="amount">Amount</label>
+            <label for="item-amount">Amount</label>
             <input type="number" id="item-amount">
         </div>
         <button type="submit">Add Item</button>
